--- a/examples/src/styles/style.css
+++ b/examples/src/styles/style.css
@@ -1,13 +1,3 @@
-.icon-title {
-    font-size: 20px;
-    margin: 40px 0 20px;
-}
-
-.icon-list {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.icon-item {
-    width: 400px;
+.__ps_font-icon__:hover {
+    background-color: beige;
 }
