--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1516776128');
-  src: url('../fonts/polestar.eot?1516776128#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1516776128') format('woff2'),
-       url('../fonts/polestar.woff?1516776128') format('woff'),
-       url('../fonts/polestar.ttf?1516776128') format('truetype'),
-       url('../fonts/polestar.svg?1516776128#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1517386116');
+  src: url('../fonts/polestar.eot?1517386116#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1517386116') format('woff2'),
+       url('../fonts/polestar.woff?1517386116') format('woff'),
+       url('../fonts/polestar.ttf?1517386116') format('truetype'),
+       url('../fonts/polestar.svg?1517386116#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -19,7 +19,7 @@
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
-  margin-right: .2em;
+  /* margin-right: .2em; */
   text-align: center;
   /* opacity: .8; */
  
@@ -32,7 +32,7 @@
  
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
-  margin-left: .2em;
+  /* margin-left: .2em; */
  
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
