--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1517386116');
-  src: url('../fonts/polestar.eot?1517386116#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1517386116') format('woff2'),
-       url('../fonts/polestar.woff?1517386116') format('woff'),
-       url('../fonts/polestar.ttf?1517386116') format('truetype'),
-       url('../fonts/polestar.svg?1517386116#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1521096142');
+  src: url('../fonts/polestar.eot?1521096142#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1521096142') format('woff2'),
+       url('../fonts/polestar.woff?1521096142') format('woff'),
+       url('../fonts/polestar.ttf?1521096142') format('truetype'),
+       url('../fonts/polestar.svg?1521096142#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,6 +15,8 @@
   font-style: normal;
   font-weight: normal;
   speak: none;
+ 
+  vertical-align: 5%;
  
   display: inline-block;
   text-decoration: inherit;
