--- a/src/css/animate.css
+++ b/src/css/animate.css
@@ -1,3 +1,12 @@
+.polestar-icon {
+    display: inline-block;
+    font: normal normal normal 14px/1 polestar;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 /* Pulse Spin */
 .faa-spin-pulse.animated,
 .faa-spin-pulse.animated-hover:hover,
