--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1535356345');
-  src: url('../fonts/polestar.eot?1535356345#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1535356345') format('woff2'),
-       url('../fonts/polestar.woff?1535356345') format('woff'),
-       url('../fonts/polestar.ttf?1535356345') format('truetype'),
-       url('../fonts/polestar.svg?1535356345#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1535443015');
+  src: url('../fonts/polestar.eot?1535443015#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1535443015') format('woff2'),
+       url('../fonts/polestar.woff?1535443015') format('woff'),
+       url('../fonts/polestar.ttf?1535443015') format('truetype'),
+       url('../fonts/polestar.svg?1535443015#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -876,3 +876,13 @@
 .ps-font-icon-add-document:before { content: '\E33A' } 
 .ps-font-icon-add-creation:before { content: '\E33B' } 
 .ps-font-icon-add-next:before { content: '\E33C' } 
+.ps-font-icon-file-excel:before { content: '\E33D' } 
+.ps-font-icon-file-powerpoint:before { content: '\E33E' } 
+.ps-font-icon-file-word:before { content: '\E33F' } 
+.ps-font-icon-file-pdf:before { content: '\E340' } 
+.ps-font-icon-file-jpg:before { content: '\E341' } 
+.ps-font-icon-file-svg:before { content: '\E342' } 
+.ps-font-icon-file-psd:before { content: '\E343' } 
+.ps-font-icon-file-ai:before { content: '\E344' } 
+.ps-font-icon-file-xml:before { content: '\E345' } 
+.ps-font-icon-file-json:before { content: '\E346' } 
