--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1540194079');
-  src: url('../fonts/polestar.eot?1540194079#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1540194079') format('woff2'),
-       url('../fonts/polestar.woff?1540194079') format('woff'),
-       url('../fonts/polestar.ttf?1540194079') format('truetype'),
-       url('../fonts/polestar.svg?1540194079#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1541556680');
+  src: url('../fonts/polestar.eot?1541556680#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1541556680') format('woff2'),
+       url('../fonts/polestar.woff?1541556680') format('woff'),
+       url('../fonts/polestar.ttf?1541556680') format('truetype'),
+       url('../fonts/polestar.svg?1541556680#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -893,3 +893,5 @@
 .ps-font-icon-electirc-power:before { content: '\E34B' } 
 .ps-font-icon-voltage:before { content: '\E34C' } 
 .ps-font-icon-electirc-current:before { content: '\E34D' } 
+.ps-font-icon-fullscreen:before { content: '\E34E' } 
+.ps-font-icon-fullscreen-exit:before { content: '\E34F' } 
