--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1541556680');
-  src: url('../fonts/polestar.eot?1541556680#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1541556680') format('woff2'),
-       url('../fonts/polestar.woff?1541556680') format('woff'),
-       url('../fonts/polestar.ttf?1541556680') format('truetype'),
-       url('../fonts/polestar.svg?1541556680#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1542004969');
+  src: url('../fonts/polestar.eot?1542004969#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1542004969') format('woff2'),
+       url('../fonts/polestar.woff?1542004969') format('woff'),
+       url('../fonts/polestar.ttf?1542004969') format('truetype'),
+       url('../fonts/polestar.svg?1542004969#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -662,7 +662,7 @@
 .ps-font-icon-spoon:before { content: '\E264' } 
 .ps-font-icon-spotify:before { content: '\E265' } 
 .ps-font-icon-square-o:before { content: '\E266' } 
-.ps-font-icon-square:before { content: '\E267' } 
+.ps-font-icon-NameMe.851:before { content: '\E267' } 
 .ps-font-icon-stack-exchange:before { content: '\E268' } 
 .ps-font-icon-stack-overflow:before { content: '\E269' } 
 .ps-font-icon-star-half-empty:before { content: '\E26A' } 
@@ -895,3 +895,7 @@
 .ps-font-icon-electirc-current:before { content: '\E34D' } 
 .ps-font-icon-fullscreen:before { content: '\E34E' } 
 .ps-font-icon-fullscreen-exit:before { content: '\E34F' } 
+.ps-font-icon-polygon:before { content: '\E350' } 
+.ps-font-icon-rectangle:before { content: '\E351' } 
+.ps-font-icon-triangle:before { content: '\E352' } 
+.ps-font-icon-draw-line:before { content: '\E353' } 
