--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1542004969');
-  src: url('../fonts/polestar.eot?1542004969#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1542004969') format('woff2'),
-       url('../fonts/polestar.woff?1542004969') format('woff'),
-       url('../fonts/polestar.ttf?1542004969') format('truetype'),
-       url('../fonts/polestar.svg?1542004969#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1545024335');
+  src: url('../fonts/polestar.eot?1545024335#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1545024335') format('woff2'),
+       url('../fonts/polestar.woff?1545024335') format('woff'),
+       url('../fonts/polestar.ttf?1545024335') format('truetype'),
+       url('../fonts/polestar.svg?1545024335#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -899,3 +899,4 @@
 .ps-font-icon-rectangle:before { content: '\E351' } 
 .ps-font-icon-triangle:before { content: '\E352' } 
 .ps-font-icon-draw-line:before { content: '\E353' } 
+.ps-font-icon-purification-plant:before { content: '\E354' } 
