--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1545024335');
-  src: url('../fonts/polestar.eot?1545024335#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1545024335') format('woff2'),
-       url('../fonts/polestar.woff?1545024335') format('woff'),
-       url('../fonts/polestar.ttf?1545024335') format('truetype'),
-       url('../fonts/polestar.svg?1545024335#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1546414274');
+  src: url('../fonts/polestar.eot?1546414274#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1546414274') format('woff2'),
+       url('../fonts/polestar.woff?1546414274') format('woff'),
+       url('../fonts/polestar.ttf?1546414274') format('truetype'),
+       url('../fonts/polestar.svg?1546414274#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -900,3 +900,12 @@
 .ps-font-icon-triangle:before { content: '\E352' } 
 .ps-font-icon-draw-line:before { content: '\E353' } 
 .ps-font-icon-purification-plant:before { content: '\E354' } 
+.ps-font-icon-gas-lel:before { content: '\E355' } 
+.ps-font-icon-gas:before { content: '\E356' } 
+.ps-font-icon-volumetricFlow:before { content: '\E357' } 
+.ps-font-icon-massFlow:before { content: '\E358' } 
+.ps-font-icon-windSpeed:before { content: '\E359' } 
+.ps-font-icon-soilMoisture:before { content: '\E35A' } 
+.ps-font-icon-acidity:before { content: '\E35B' } 
+.ps-font-icon-rainFall:before { content: '\E35C' } 
+.ps-font-icon-skull:before { content: '\E35D' } 
