--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1546414274');
-  src: url('../fonts/polestar.eot?1546414274#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1546414274') format('woff2'),
-       url('../fonts/polestar.woff?1546414274') format('woff'),
-       url('../fonts/polestar.ttf?1546414274') format('truetype'),
-       url('../fonts/polestar.svg?1546414274#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1546823316');
+  src: url('../fonts/polestar.eot?1546823316#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1546823316') format('woff2'),
+       url('../fonts/polestar.woff?1546823316') format('woff'),
+       url('../fonts/polestar.ttf?1546823316') format('truetype'),
+       url('../fonts/polestar.svg?1546823316#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -909,3 +909,17 @@
 .ps-font-icon-acidity:before { content: '\E35B' } 
 .ps-font-icon-rainFall:before { content: '\E35C' } 
 .ps-font-icon-skull:before { content: '\E35D' } 
+.ps-font-icon-rulechain:before { content: '\E35E' } 
+.ps-font-icon-udp-trigger:before { content: '\E35F' } 
+.ps-font-icon-udp-send:before { content: '\E360' } 
+.ps-font-icon-http:before { content: '\E361' } 
+.ps-font-icon-mqtt:before { content: '\E362' } 
+.ps-font-icon-modbus-read:before { content: '\E363' } 
+.ps-font-icon-modbus-write:before { content: '\E364' } 
+.ps-font-icon-monitoring:before { content: '\E365' } 
+.ps-font-icon-ai:before { content: '\E366' } 
+.ps-font-icon-ai-model:before { content: '\E367' } 
+.ps-font-icon-anomaly-detection:before { content: '\E368' } 
+.ps-font-icon-counter-get:before { content: '\E369' } 
+.ps-font-icon-counter-set:before { content: '\E36A' } 
+.ps-font-icon-threshold:before { content: '\E36B' } 
