--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1546823316');
-  src: url('../fonts/polestar.eot?1546823316#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1546823316') format('woff2'),
-       url('../fonts/polestar.woff?1546823316') format('woff'),
-       url('../fonts/polestar.ttf?1546823316') format('truetype'),
-       url('../fonts/polestar.svg?1546823316#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1550032494');
+  src: url('../fonts/polestar.eot?1550032494#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1550032494') format('woff2'),
+       url('../fonts/polestar.woff?1550032494') format('woff'),
+       url('../fonts/polestar.ttf?1550032494') format('truetype'),
+       url('../fonts/polestar.svg?1550032494#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -830,8 +830,8 @@
 .ps-font-icon-yelp:before { content: '\E30C' } 
 .ps-font-icon-youtube-square:before { content: '\E30D' } 
 .ps-font-icon-youtube:before { content: '\E30E' } 
-.ps-font-icon-thingstar:before { content: '\E30F' } 
-.ps-font-icon-thingstar-ap:before { content: '\E310' } 
+.ps-font-icon-aiotion:before { content: '\E30F' } 
+.ps-font-icon-aiotion-ap:before { content: '\E310' } 
 .ps-font-icon-kafka:before { content: '\E311' } 
 .ps-font-icon-kafka-broker:before { content: '\E312' } 
 .ps-font-icon-cassandra:before { content: '\E313' } 
@@ -923,3 +923,5 @@
 .ps-font-icon-counter-get:before { content: '\E369' } 
 .ps-font-icon-counter-set:before { content: '\E36A' } 
 .ps-font-icon-threshold:before { content: '\E36B' } 
+.ps-font-icon-fine-dust:before { content: '\E36C' } 
+.ps-font-icon-exit:before { content: '\E36D' } 
