--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1550032494');
-  src: url('../fonts/polestar.eot?1550032494#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1550032494') format('woff2'),
-       url('../fonts/polestar.woff?1550032494') format('woff'),
-       url('../fonts/polestar.ttf?1550032494') format('truetype'),
-       url('../fonts/polestar.svg?1550032494#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1552615990');
+  src: url('../fonts/polestar.eot?1552615990#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1552615990') format('woff2'),
+       url('../fonts/polestar.woff?1552615990') format('woff'),
+       url('../fonts/polestar.ttf?1552615990') format('truetype'),
+       url('../fonts/polestar.svg?1552615990#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -925,3 +925,6 @@
 .ps-font-icon-threshold:before { content: '\E36B' } 
 .ps-font-icon-fine-dust:before { content: '\E36C' } 
 .ps-font-icon-exit:before { content: '\E36D' } 
+.ps-font-icon-aws-iot:before { content: '\E36E' } 
+.ps-font-icon-aws:before { content: '\E36F' } 
+.ps-font-icon-resource:before { content: '\E370' } 
