--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1552615990');
-  src: url('../fonts/polestar.eot?1552615990#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1552615990') format('woff2'),
-       url('../fonts/polestar.woff?1552615990') format('woff'),
-       url('../fonts/polestar.ttf?1552615990') format('truetype'),
-       url('../fonts/polestar.svg?1552615990#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1552895924');
+  src: url('../fonts/polestar.eot?1552895924#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1552895924') format('woff2'),
+       url('../fonts/polestar.woff?1552895924') format('woff'),
+       url('../fonts/polestar.ttf?1552895924') format('truetype'),
+       url('../fonts/polestar.svg?1552895924#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -928,3 +928,5 @@
 .ps-font-icon-aws-iot:before { content: '\E36E' } 
 .ps-font-icon-aws:before { content: '\E36F' } 
 .ps-font-icon-resource:before { content: '\E370' } 
+.ps-font-icon-integration-1:before { content: '\E371' } 
+.ps-font-icon-integration-2:before { content: '\E372' } 
