--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1553217386');
-  src: url('../fonts/polestar.eot?1553217386#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1553217386') format('woff2'),
-       url('../fonts/polestar.woff?1553217386') format('woff'),
-       url('../fonts/polestar.ttf?1553217386') format('truetype'),
-       url('../fonts/polestar.svg?1553217386#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1553219879');
+  src: url('../fonts/polestar.eot?1553219879#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1553219879') format('woff2'),
+       url('../fonts/polestar.woff?1553219879') format('woff'),
+       url('../fonts/polestar.ttf?1553219879') format('truetype'),
+       url('../fonts/polestar.svg?1553219879#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -930,3 +930,5 @@
 .ps-font-icon-resource:before { content: '\E370' } 
 .ps-font-icon-integration-1:before { content: '\E371' } 
 .ps-font-icon-integration-2:before { content: '\E372' } 
+.ps-font-icon-plus-square-edge:before { content: '\E373' } 
+.ps-font-icon-minus-square-edge:before { content: '\E374' } 
