--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1553236964');
-  src: url('../fonts/polestar.eot?1553236964#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1553236964') format('woff2'),
-       url('../fonts/polestar.woff?1553236964') format('woff'),
-       url('../fonts/polestar.ttf?1553236964') format('truetype'),
-       url('../fonts/polestar.svg?1553236964#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1553499043');
+  src: url('../fonts/polestar.eot?1553499043#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1553499043') format('woff2'),
+       url('../fonts/polestar.woff?1553499043') format('woff'),
+       url('../fonts/polestar.ttf?1553499043') format('truetype'),
+       url('../fonts/polestar.svg?1553499043#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -931,4 +931,7 @@
 .ps-font-icon-integration-2:before { content: '\E371' } 
 .ps-font-icon-plus-square-edge:before { content: '\E372' } 
 .ps-font-icon-minus-square-edge:before { content: '\E373' } 
-.ps-font-icon-square:before { content: '\E374' } 
+.ps-font-icon-scatter-chart:before { content: '\E374' } 
+.ps-font-icon-heat-map:before { content: '\E375' } 
+.ps-font-icon-tree-map:before { content: '\E376' } 
+.ps-font-icon-square:before { content: '\E377' } 
