--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1553499043');
-  src: url('../fonts/polestar.eot?1553499043#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1553499043') format('woff2'),
-       url('../fonts/polestar.woff?1553499043') format('woff'),
-       url('../fonts/polestar.ttf?1553499043') format('truetype'),
-       url('../fonts/polestar.svg?1553499043#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1553567468');
+  src: url('../fonts/polestar.eot?1553567468#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1553567468') format('woff2'),
+       url('../fonts/polestar.woff?1553567468') format('woff'),
+       url('../fonts/polestar.ttf?1553567468') format('truetype'),
+       url('../fonts/polestar.svg?1553567468#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -935,3 +935,7 @@
 .ps-font-icon-heat-map:before { content: '\E375' } 
 .ps-font-icon-tree-map:before { content: '\E376' } 
 .ps-font-icon-square:before { content: '\E377' } 
+.ps-font-icon-device-create:before { content: '\E378' } 
+.ps-font-icon-device-update:before { content: '\E379' } 
+.ps-font-icon-device-delete:before { content: '\E37A' } 
+.ps-font-icon-device-query:before { content: '\E37B' } 
