--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1553825630');
-  src: url('../fonts/polestar.eot?1553825630#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1553825630') format('woff2'),
-       url('../fonts/polestar.woff?1553825630') format('woff'),
-       url('../fonts/polestar.ttf?1553825630') format('truetype'),
-       url('../fonts/polestar.svg?1553825630#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1554079006');
+  src: url('../fonts/polestar.eot?1554079006#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1554079006') format('woff2'),
+       url('../fonts/polestar.woff?1554079006') format('woff'),
+       url('../fonts/polestar.ttf?1554079006') format('truetype'),
+       url('../fonts/polestar.svg?1554079006#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -939,3 +939,7 @@
 .ps-font-icon-device-update:before { content: '\E379' } 
 .ps-font-icon-device-delete:before { content: '\E37A' } 
 .ps-font-icon-device-query:before { content: '\E37B' } 
+.ps-font-icon-bar-chart-1:before { content: '\E37C' } 
+.ps-font-icon-column-bar-1:before { content: '\E37D' } 
+.ps-font-icon-column-bar-2:before { content: '\E37E' } 
+.ps-font-icon-column-bar-3:before { content: '\E37F' } 
