--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1554282034');
-  src: url('../fonts/polestar.eot?1554282034#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1554282034') format('woff2'),
-       url('../fonts/polestar.woff?1554282034') format('woff'),
-       url('../fonts/polestar.ttf?1554282034') format('truetype'),
-       url('../fonts/polestar.svg?1554282034#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1554961917');
+  src: url('../fonts/polestar.eot?1554961917#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1554961917') format('woff2'),
+       url('../fonts/polestar.woff?1554961917') format('woff'),
+       url('../fonts/polestar.ttf?1554961917') format('truetype'),
+       url('../fonts/polestar.svg?1554961917#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -943,3 +943,19 @@
 .ps-font-icon-column-bar-1:before { content: '\E37D' } 
 .ps-font-icon-column-bar-2:before { content: '\E37E' } 
 .ps-font-icon-column-bar-3:before { content: '\E37F' } 
+.ps-font-icon-static-group:before { content: '\E380' } 
+.ps-font-icon-smart-group:before { content: '\E381' } 
+.ps-font-icon-sun-os:before { content: '\E382' } 
+.ps-font-icon-hp-ux:before { content: '\E383' } 
+.ps-font-icon-hp-ux-o:before { content: '\E384' } 
+.ps-font-icon-aix:before { content: '\E385' } 
+.ps-font-icon-thunderbolt-1:before { content: '\E386' } 
+.ps-font-icon-thunderbolt-2:before { content: '\E387' } 
+.ps-font-icon-thunderbolt-arrow:before { content: '\E388' } 
+.ps-font-icon-kite:before { content: '\E389' } 
+.ps-font-icon-kite-o:before { content: '\E38A' } 
+.ps-font-icon-fire-1:before { content: '\E38B' } 
+.ps-font-icon-fire-2:before { content: '\E38C' } 
+.ps-font-icon-boat-1:before { content: '\E38D' } 
+.ps-font-icon-boat-2:before { content: '\E38E' } 
+.ps-font-icon-boat-o:before { content: '\E38F' } 
