--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1554961917');
-  src: url('../fonts/polestar.eot?1554961917#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1554961917') format('woff2'),
-       url('../fonts/polestar.woff?1554961917') format('woff'),
-       url('../fonts/polestar.ttf?1554961917') format('truetype'),
-       url('../fonts/polestar.svg?1554961917#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1556167982');
+  src: url('../fonts/polestar.eot?1556167982#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1556167982') format('woff2'),
+       url('../fonts/polestar.woff?1556167982') format('woff'),
+       url('../fonts/polestar.ttf?1556167982') format('truetype'),
+       url('../fonts/polestar.svg?1556167982#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -959,3 +959,4 @@
 .ps-font-icon-boat-1:before { content: '\E38D' } 
 .ps-font-icon-boat-2:before { content: '\E38E' } 
 .ps-font-icon-boat-o:before { content: '\E38F' } 
+.ps-font-icon-hp:before { content: '\E390' } 
