--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1563446448');
-  src: url('../fonts/polestar.eot?1563446448#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1563446448') format('woff2'),
-       url('../fonts/polestar.woff?1563446448') format('woff'),
-       url('../fonts/polestar.ttf?1563446448') format('truetype'),
-       url('../fonts/polestar.svg?1563446448#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1563519862');
+  src: url('../fonts/polestar.eot?1563519862#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1563519862') format('woff2'),
+       url('../fonts/polestar.woff?1563519862') format('woff'),
+       url('../fonts/polestar.ttf?1563519862') format('truetype'),
+       url('../fonts/polestar.svg?1563519862#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -1019,3 +1019,4 @@
 .ps-font-icon-fire-3:before { content: '\E3C9' } 
 .ps-font-icon-fire-4:before { content: '\E3CA' } 
 .ps-font-icon-fire-5:before { content: '\E3CB' } 
+.ps-font-icon-smart-group-1:before { content: '\E3CC' } 
